@@ -16,12 +16,15 @@
 
 package org.terasology.launcher.settings;
 
+import com.google.common.collect.Lists;
+import com.google.common.collect.Sets;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.terasology.launcher.util.JavaHeapSize;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 
 /**
  * Provides methods to check launcher settings and correct if invalid.
@@ -29,19 +32,34 @@ import java.util.List;
 public final class LauncherSettingsValidator {
     private static final Logger logger = LoggerFactory.getLogger(LauncherSettingsValidator.class);
 
+    private static Set<String> deprecatedParameters =
+            Sets.newHashSet("-XX:+UseParNewGC", "-XX:+UseConcMarkSweepGC", "-XX:ParallelGCThreads=10");
+
+    private static String removeUnsupportedJvmParameters(final List<String> params) {
+        List<String> correctedParams = Lists.newArrayList(params);
+        correctedParams.removeAll(deprecatedParameters);
+        return String.join(" ", correctedParams);
+    }
+
     private static final List<SettingsValidationRule> RULES = Arrays.asList(
             // Rule for max heap size
             new SettingsValidationRule(
-                s -> !(System.getProperty("os.arch").equals("x86") && s.getMaxHeapSize().compareTo(JavaHeapSize.GB_1_5) > 0),
-                "Max heap size cannot be greater than 1.5 GB for a 32-bit JVM",
-                s -> s.setMaxHeapSize(JavaHeapSize.GB_1_5)
+                    s -> !(System.getProperty("os.arch").equals("x86") && s.getMaxHeapSize().compareTo(JavaHeapSize.GB_1_5) > 0),
+                    "Max heap size cannot be greater than 1.5 GB for a 32-bit JVM",
+                    s -> s.setMaxHeapSize(JavaHeapSize.GB_1_5)
             ),
 
             // Rule for initial heap size
             new SettingsValidationRule(
-                s -> s.getInitialHeapSize().compareTo(s.getMaxHeapSize()) < 0,
+                    s -> s.getInitialHeapSize().compareTo(s.getMaxHeapSize()) < 0,
                     "Initial heap size cannot be greater than max heap size",
-                s -> s.setInitialHeapSize(s.getMaxHeapSize())
+                    s -> s.setInitialHeapSize(s.getMaxHeapSize())
+            ),
+
+            new SettingsValidationRule(
+                    s -> s.getUserGameParameterList().stream().anyMatch(deprecatedParameters::contains),
+                    "Ensure unsupported JVM arguments are removed",
+                    s -> s.setUserJavaParameters(removeUnsupportedJvmParameters(s.getUserJavaParameterList()))
             )
     );
 
